<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jeferson.moises.provajefersonmoises.Tela2"
    android:background="@drawable/background">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nome_meta"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/t2_et_nome" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/peso_atual"
        android:ems="10"
        android:layout_below="@+id/t2_et_nome"
        android:layout_alignEnd="@+id/t2_et_nome"
        android:id="@+id/t2_et_peso_atual" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/peso_desejado"
        android:ems="10"
        android:layout_below="@+id/t2_et_peso_atual"
        android:layout_alignParentStart="true"
        android:id="@+id/t2_et_peso_desejado" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t2_et_peso_desejado"
        android:layout_alignParentStart="true"
        android:id="@+id/t2_rg_sexo">

        <RadioButton
            android:text="@string/masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t2_rd_masculino"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t2_rd_feminino"
            android:layout_weight="1" />
    </RadioGroup>

    <CheckBox
        android:text="@string/manha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/t2_cb_manha" />

    <CheckBox
        android:text="@string/tarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/t2_cb_manha"
        android:layout_centerHorizontal="true"
        android:id="@+id/t2_cb_tarde" />

    <CheckBox
        android:text="@string/noite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/t2_cb_tarde"
        android:layout_alignParentEnd="true"
        android:id="@+id/t2_cb_noite" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t2_cb_manha"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/t2_sp_treino"
        android:entries="@array/t2_sp_array_treino"/>

    <Button
        android:text="@string/cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:id="@+id/t2_btn_cadastrar"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/t2_cb_tarde" />
</RelativeLayout>
